<resources>
    <string name="app_name">showapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_article">Add Article</string>
    <string name="name">Name*</string>
    <string name="article_name">Article Name</string>
    <string name="category">Category*</string>
    <string name="chose_your_category">Chose your category</string>
    <string name="price">Price*</string>
    <string name="article_price">Article Price</string>
    <string name="quantity">Quantity*</string>
    <string name="quantity_hint">Quantity</string>
    <string name="type">Type*</string>
    <string name="chose_your_article_type">Chose your article type</string>
    <string name="description">Description*</string>
    <string name="description_hint">Description</string>
    <string name="add_image">Add Image</string>
    <string name="news_title">News title</string>
    <string name="your_news_title">Your news title</string>
    <string name="add_news">add News</string>
    <string name="your_available_news">Your available news</string>
    <string name="add_articles">Add Articles</string>
    <string name="articles_list">Articles \'List</string>
    <string name="news">News</string>
    <string name="rate_our_application">Rate our Application</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_showapp">Welcome to showapp</string>
    <string name="business_owner">Business Owner:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="brand_name">Brand Name:</string>
    <string name="your_brand_name">Your Brand Name</string>
    <string name="contact_number">Contact Number:</string>
    <string name="_12345678">12345678</string>
    <string name="email">Email:</string>
    <string name="aze_rty_com">aze@rty.com</string>
    <string name="password">Password:</string>
    <string name="aze2_1_zxw">Aze2/.1\'zxw</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="type_of_business">Type of Business :</string>
    <string name="add_logo">Add Logo</string>
    <string name="register_business">Register Business</string>
    <string name="welcome">Welcome</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="user_sign_up">User sign up</string>
    <string name="company_sign_up">Company sign up</string>
    <string name="forget_passwordd">Forget Password?</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don\'t worry it happens. Please enter the address associated with your account</string>
    <string name="continuee">Continue</string>
    <string name="email_adress_verification">Email Adress Verification</string>
    <string name="enter_the_code_here">Enter the code here</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="number">Number</string>
    <string name="my_cart">My Cart</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="check_out">CHECK OUT</string>
    <string name="total_amount">Total amount:</string>
    <string name="empty_favourite">Empty favourite</string>
    <string name="articles">Articles</string>
    <string name="view_all">View all</string>
    <string name="you_never_seen_before">You Never seen Before</string>
    <string name="edit_profile">Edit profile</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="language">Language</string>
    <string name="search_article_per_name">Search article per name</string>
    <string name="add_to_cart">add to cart</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_number">Edit Number</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="add_picture">add picture</string>
    <string name="loading">Loading...</string>
    <string name="fashion_sale">Fashion Sale</string>
    <string name="check">Check</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="edit_maill">Edit mail</string>
    <string name="edit_numberr">Edit number</string>
    <string name="edit_profile_picturee">Edit profile picture</string>
    <string name="chose_language">Chose Language</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_history_orders">HistoryOrdersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>