<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAd"
    tools:context=".Activity.CompanyAddArticle">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_article"
        android:textColor="@color/mainText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/L1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticleNameText"
            android:textColor="@color/mainText"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/article_name"
            android:background="@drawable/border"
            android:id="@+id/ArticleName"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColorHint="@color/mainText"
            android:textColor="@color/mainText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/L2"
        android:layout_below="@id/L1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticleCategoryText"
            android:textColor="@color/mainText"
            android:layout_marginStart="0dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/chose_your_category"
            android:id="@+id/ArticleCategory"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColor="@color/mainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/L3"
        android:layout_below="@+id/L2">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticlePriceText"
            android:textColor="@color/mainText"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/article_price"
            android:background="@drawable/border"
            android:id="@+id/ArticlePrice"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColor="@color/mainText"
            android:textColorHint="@color/mainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/L4"
        android:layout_below="@+id/L3">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticleQuantityText"
            android:textColor="@color/mainText"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/quantity_hint"
            android:background="@drawable/border"
            android:id="@+id/ArticleQuantity"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColorHint="@color/mainText"
            android:textColor="@color/mainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/L5"
        android:layout_below="@id/L4">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticleTypeText"
            android:textColor="@color/mainText"
            android:layout_marginStart="0dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/chose_your_article_type"
            android:id="@+id/ArticleType"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColor="@color/mainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/L8"
        android:layout_below="@+id/L5">
        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ArticleDescriptionText"
            android:textColor="@color/mainText"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:background="@drawable/border"
            android:id="@+id/ArticleDescription"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:maxLength="300"
            android:textColor="@color/mainText"
            android:textColorHint="@color/mainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/L8"
        android:id="@+id/L6"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
        <ImageView
            android:id="@+id/ArticleImageAdd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_baseline_image_24"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AddImageArticle"
            android:text="@string/add_image"
            android:backgroundTint="@color/pink"
            android:layout_margin="20dp"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/AddArticleBtn"
        android:layout_below="@id/L6"
        android:text="@string/add_article"
        android:backgroundTint="@color/pink"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>




</RelativeLayout>