<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundAd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity.MainActivity">


        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_showapp"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BusinessOwnerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Welcome"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/business_owner"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/BusinessOwnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BusinessOwnerText"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/BOFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="@string/first_name"
                android:padding="20dp"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"/>

            <EditText
                android:id="@+id/BOLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="@string/last_name"
                android:padding="20dp"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/BrandNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BusinessOwnerLayout"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/brand_name"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/BrandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandNameText"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/your_brand_name"
            android:padding="20dp"
            android:textColor="@color/mainText"
            android:textColorHint="@color/mainText"/>

        <TextView
            android:id="@+id/ContactNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandName"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/contact_number"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ContactNumberText"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/_12345678"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/mainText"
            android:textColorHint="@color/mainText"/>

        <TextView
            android:id="@+id/BrandEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ContactNumber"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/email"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/BrandEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandEmailText"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/aze_rty_com"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/mainText"
            android:textColorHint="@color/mainText"/>

        <TextView
            android:id="@+id/BrandPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandEmail"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/password"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandPasswordText"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/BrandPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/aze2_1_zxw"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/BrandConfirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/confirm_password"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BrandConfirmPasswordText"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/BrandConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BrandConfirmPasswordText"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:hint="@string/aze2_1_zxw"
                android:padding="20dp"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"
                android:textCursorDrawable="@drawable/color_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TypeOfBusinessText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/second"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/type_of_business"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TypeOfBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TypeOfBusinessText"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:padding="20dp"
            android:text="@string/chose_your_article_type"
            android:textColor="@color/mainText" />

        <LinearLayout
            android:id="@+id/ImageAndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TypeOfBusiness"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/UserImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/ic_baseline_person_outline_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/pink"
                android:text="@string/add_logo" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterBusiness"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ImageAndButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/register_business" />


    </RelativeLayout>
</ScrollView>
