<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAd"
    tools:context=".Activity.MainActivity"
    android:id="@+id/MainActivityy">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/Showapp"
        android:src="@drawable/showapp"/>

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Showapp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/mainText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Welcome"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email_hint"
        android:padding="28dp"
        android:textColor="@color/mainText"
        android:textColorHint="@color/mainText"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailInput"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        style="@style/CardView.Light"
        android:drawablePadding="20dp"
        android:hint="@string/password_hint"
        android:padding="28dp"
        android:textColor="@color/mainText"
        android:textColorHint="@color/mainText"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/login"
        android:textColor="@color/mainText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ForgetPassword"
        android:layout_below="@id/LoginBtn"
        android:text="@string/forget_password"
        android:textColor="@color/mainText"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/SocialIcons"
        android:layout_below="@id/ForgetPassword">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:id="@+id/google_btn"
            android:src="@drawable/google"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpUser"
            android:text="@string/user_sign_up"
            android:textColor="@color/mainText"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpComapny"
            android:text="@string/company_sign_up"
            android:textColor="@color/mainText"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:visibility="visible"
        android:id="@+id/animationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/LoginBtn"
        android:layout_centerHorizontal="true"
        app:lottie_rawRes="@raw/circle_progress" />


</RelativeLayout>
