<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAd"
    tools:context=".Activity.UserForgetPassword">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/securite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/imageSecurite"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ForgetPassword"
        android:layout_below="@+id/imageSecurite"
        android:layout_marginTop="30dp"
        android:text="@string/forget_passwordd"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/mainText"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dont"
        android:layout_below="@+id/ForgetPassword"
        android:text="@string/don_t_worry_it_happens_please_enter_the_address_associated_with_your_account"
        android:textSize="22sp"
        android:padding="10dp"
        android:textColor="@color/mainText"/>
    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dont"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email_hint"
        android:padding="28dp"
        android:textColor="@color/mainText"
        android:textColorHint="@color/mainText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/continuee" />
</RelativeLayout>